--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,16 +3,34 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Home</ion-title>
+    <ion-title>
+      Home
+    </ion-title>
   </ion-navbar>
 </ion-header>
-
-<ion-content padding>
-  <h3>Ionic Menu Starter</h3>
-
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
-
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+<ion-content padding id="page1" >
+  <div text-center margin-vertical>
+    <!-- <button ion-button outline round center large color="dark">
+        
+    </button> -->
+    <button ion-button icon-only large color="danger"  round center>
+        <ion-icon name="mic"></ion-icon>
+    </button>
+  </div>
+  <ion-card>
+      <ion-card-content>
+        <ion-card-title>
+          <button ion-button primary (click)="stopRecord()" *ngIf="recording"><ion-icon name="mic-off"></ion-icon>&nbsp;&nbsp;Stop Record</button>
+          <button ion-button primary (click)="startRecord()" *ngIf="!recording"><ion-icon name="mic"></ion-icon>&nbsp;&nbsp;Start Record</button>
+        </ion-card-title>
+      </ion-card-content>
+    </ion-card>
+    <ion-list>
+      <ion-item *ngFor="let audio of audioList; index as i;">
+        <p>{{audio.filename}}</p>
+        <button ion-button clear item-end large (click)="playAudio(audio.filename, i)"><ion-icon name="play"></ion-icon></button>
+      </ion-item>
+    </ion-list>
+ 
+  
 </ion-content>
